2014-06-22  Junichi Satoh  <junichi@rworks.jp>

	* include/functions_api.php: Added support for 'each_ff' and
	'ff_timeout' to 'set new_network_component', 
	'set new_plugin_component' and 'set new_snmp_component'.
	Fixed that component id can not be set correctly by
	'set new_*_component'.

2014-06-21  Junichi Satoh  <junichi@rworks.jp>
	
	* include/functions_api.php: Added support for 'each_ff' and
	'ff_timeout' to module creation and modifying APIs.

2014-06-20  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* extensions/system_info.php: Error fixes.

2014-06-20  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* extensions/system_info.php: Error fixes.

2014-06-20  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* extensions/system_info.php: Error fix.

2014-06-20  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* extensions/system_info.php: Improved the user experience.

2014-06-18  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/javascript/d3.v3.4.8.js: added the last version of D3.

2014-06-18  Vanessa Gil <vanessa.gil@artica.es>

	* godmode/reporting/visual_console_builder.php: Changed
	default size of the module graphs.

2014-06-18  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* godmode/reporting/visual_console_builder.editor.php:
	Added some buttons, like a control to edit the html code
	of the tinymce's textarea.

	* godmode/reporting/visual_console_builder.editor.js:
	Modified the funtion "hiddenFields" to enable the tinymce's
	code control only if the item is a label.

2014-06-18  Sergio Martin <sergio.martin@artica.es>

	* include/graphs/flot/pandora.flot.js: Fixed position of the
	event information box in flot modules graphs when click on
	events "ball" for ticket: #948

2014-06-17  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* godmode/reporting/visual_console_builder.editor.js:
	Modified the function "loadFieldsFromDB" to fix the graph
	type selection.
