@@ -1,5 +1,10 @@
 2014-06-22  Junichi Satoh  <junichi@rworks.jp>
 
+	* godmode/massive/massive_edit_modules.php: Fixed unexpected update
+	of 'module_interval'.
+
+2014-06-22  Junichi Satoh  <junichi@rworks.jp>
+
 	* include/functions_api.php: Added support for 'each_ff' and
 	'ff_timeout' to 'set new_network_component', 
 	'set new_plugin_component' and 'set new_snmp_component'.
